--- a/part3/phonebook_backend/package.json
+++ b/part3/phonebook_backend/package.json
@@ -17,9 +17,11 @@
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^4.17.2",
+		"mongoose": "^6.2.4",
 		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
+		"dotenv": "^16.0.0",
 		"nodemon": "^2.0.15"
 	}
 }
